@@ -1,6 +1,4 @@
-
 ;; Configure flymake for python
-(setq pylint "epylint")
 (when (load "flymake" t)
   (defun flymake-pylint-init ()
     (let* ((temp-file (flymake-init-create-temp-buffer-copy
@@ -8,7 +6,8 @@
            (local-file (file-relative-name
                         temp-file
                         (file-name-directory buffer-file-name))))
-      (list (expand-file-name pylint "") (list local-file))))
+      (list "epylint" (list local-file))))
+
   (add-to-list 'flymake-allowed-file-name-masks
                '("\\.py\\'" flymake-pylint-init)))
 
